[tool.rye.scripts]
build = "docker build --tag=carderne/sigexport:dev ."
sig = "sigexport"

fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "pytest"
all = { chain = ["fmt", "lint", "check", "test"] }

[project]
name = "signal-export"
description = "Export Signal conversations to Markdown and HTML"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">= 3.9"
keywords = ["backup", "chat", "export"]

authors = [
    {name = "Chris Arderne", email="chris@rdrn.me"},
]

dynamic = ["version"]

classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python",
]

dependencies = [
    "beautifulsoup4 ~= 4.11",
    "emoji ~= 2.0",
    "Markdown ~= 3.4",
    "typer[all] ~= 0.7",
    "pycryptodome ~= 3.20",
]

[tool.rye]
managed = true
generate-hashes = false
dev-dependencies = [
    "pyright",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "types-Markdown",
    "types-emoji",
    "setuptools-scm~=8.1.0",
    "build~=1.2.1",
]

[project.urls]
homepage = "https://github.com/carderne/signal-export"
repository = "https://github.com/carderne/signal-export"

[project.scripts]
sigexport = "sigexport.main:cli"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[tool.ruff]
target-version = "py39"
exclude = ["tests", "src/pysqlcipher3"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "U",
    "N",
    "E",
    "S",
    "T100",
    "A",
    "Q",
    "ANN",
]

[tool.ruff.lint.isort]
known-first-party = ["sigexport"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src/sigexport", "tests"]
ignore = ["src/pysqlcipher3"]
reportMissingImports = true
reportMissingParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
pythonVersion = "3.9"
